# faster-poisson-disk-sampling

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: rust.yml
assets/: parental_plot.html
benches/: poisson_disk_sampling.rs
examples/: bad.rs  big_grid.rs  cmp_parental.rs
examples/fourier/: main.rs
examples/plot/: main.rs
examples/stipple/: main.rs
python/: main.py  mess.py  pyproject.toml
src/: bridson.rs  common.rs  dart.rs  fourier.rs  iter.rs  lib.rs  naive.rs  nbhd.rs  plot.rs  regular.rs  stipple.rs
