[package]
name = "faster_poisson"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
plotly = { version = "0.13.5", optional = true }
rand = "0.9.2"
rand_xoshiro = "0.7.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "poisson_disk_sampling"
harness = false
