[package]
name = "faster_poisson"
version = "1.0.2"
edition = "2024"
authors = ["Justin Steinman"]
description = "Fast Poisson disk sampling"
readme = "README.md"
repository = "https://github.com/nubDotDev/faster-poisson-disk-sampling/"
license = "MIT"
keywords = ["poisson-disk", "sampling", "distribution", "bridson", "blue-noise"]
categories = ["algorithms", "graphics", "mathematics"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
image = { version = "0.25.8", optional = true }
plotly = { version = "0.13.5", optional = true }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rustfft = { version = "6.4.0", optional = true }

[dev-dependencies]
criterion = "0.7.0"

[features]
fourier = ["dep:image", "dep:rustfft"]
image = ["dep:image"]
plotly = ["dep:plotly"]

[[bench]]
name = "poisson_disk_sampling"
harness = false

[[example]]
name = "fourier"
required-features = ["fourier", "plotly"]

[[example]]
name = "plot"
required-features = ["plotly"]
